<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.WelcomeActivity"
    android:focusableInTouchMode="true"
    tools:showIn="@layout/activity_welcome">

    <TextView
        android:id="@+id/splash_text"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/secondary_text_dark"
        android:layout_above="@+id/textInputLayout_register_username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout_register_username"
        android:layout_above="@+id/textInputLayout_login_password"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username_hint"
            android:ems="10"
            android:id="@+id/login_username"
            android:layout_gravity="center"
            android:layout_centerVertical="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout_login_password"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            android:layout_gravity="center"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_centerHorizontal="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:elevation="2dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="74dp"
        android:layout_alignTop="@+id/textInputLayout_login_password"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_to_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/secondary_text_dark"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />
</RelativeLayout>
