<resources>
    <string name="account_banned_content">Account has been banned due to reasons. Please contact the Administrator to unlock your account.</string>
    <string name="account_banned_title">Account banned</string>
    <string name="account_locked_content">Account has been locked due to too many unsuccessful login attempts. Please contact the Administrator to unlock your account.</string>
    <string name="account_locked_title">Account locked</string>
    <string name="action_search">Search</string>
    <string name="admin">Admin</string>
    <string name="admin_controls">Admin Controls</string>
    <string name="app_logo_desc">Buzz Films logo</string>
    <string name="app_name">Buzz Films</string>
    <string name="app_text_desc">Buzz Films text</string>
    <string name="auth_progress_dialog_content">Authenticating user</string>
    <string name="auth_progress_dialog_title">Logging in…</string>
...
