...
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/name_hint"
            android:ems="10"
            android:id="@+id/edit_name"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:layout_centerVertical="true" />
    </android.support.design.widget.TextInputLayout>

    <TextView
...
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:ems="10"
            android:id="@+id/edit_email"
            android:imeOptions="actionDone"
            android:layout_gravity="center"
            android:layout_centerVertical="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
...
