<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/editProfile_layout"
    tools:context="ga.neerajdelima.themovieapp.EditProfileActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName_edit_label"
        android:text="Username: "
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:padding="13dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_userName"
        android:layout_alignTop="@+id/userName_edit_label"
        android:layout_toRightOf="@+id/userName_edit_label"
        android:layout_toEndOf="@+id/userName_edit_label" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_edit_label"
        android:text="Password: "
        android:layout_below="@id/userName_edit_label"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:padding="13dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/edit_password"
        android:layout_alignBottom="@id/password_edit_label"
        android:layout_alignLeft="@id/edit_userName"
        android:layout_alignStart="@id/edit_userName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstName_edit_label"
        android:text="First Name: "
        android:layout_below="@id/password_edit_label"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:padding="13dp"/>
    <EditText
        android:id="@+id/edit_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/firstName_edit_label"
        android:layout_alignLeft="@id/edit_password"
        android:layout_alignStart="@id/edit_password" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastName_edit_label"
        android:text="Last Name: "
        android:layout_below="@id/firstName_edit_label"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:padding="13dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_lastName"
        android:layout_alignBottom="@id/lastName_edit_label"
        android:layout_alignLeft="@id/edit_firstName"
        android:layout_alignStart="@id/edit_firstName"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/major_edit_label"
        android:text="Major: "
        android:layout_below="@id/lastName_edit_label"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:padding="13dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_major_spinner"
        android:prompt="@string/majors_prompt"
        android:entries="@array/majors_array"
        android:focusable="false"
        android:layout_below="@+id/lastName_edit_label"
        android:layout_alignLeft="@+id/edit_lastName"
        android:layout_alignStart="@+id/edit_lastName" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saveChanges"
        android:text="Save Changes"
        android:onClick="saveChanges"
        android:layout_below="@id/major_edit_label"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        />

</RelativeLayout>
